# query-cost-guard

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/query_cost_guard/: __init__.py  bigquery.py  cli.py  constants.py  exceptions.py  pricing.py  result.py
tests/: test_bigquery.py  test_cli.py  test_exceptions.py  test_pricing.py
