[project]
name = "query-cost-guard"
dynamic = ["version"]
description = "Per-query cost guard for cloud databases. Set dollar or byte limits before any query runs."
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
keywords = ["bigquery", "cost", "guard", "query", "cloud"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "google-cloud-bigquery>=3.27,<4",
    "google-cloud-billing>=1.15,<2",
    "pydantic>=2.10,<3",
    "cachetools>=7.0,<8",
    "capacity>=1.3,<2",
    "structlog>=25.5,<26",
]

[project.urls]
Homepage = "https://github.com/yaelmi3/query-cost-guard"
Repository = "https://github.com/yaelmi3/query-cost-guard"
Changelog = "https://github.com/yaelmi3/query-cost-guard/blob/main/CHANGELOG.md"

[project.scripts]
query-cost-guard = "query_cost_guard.cli:app"

[project.optional-dependencies]
cli = ["typer>=0.24,<1"]
dev = ["pytest", "pytest-mock", "ruff>=0.1.0", "pylint>=3.0.0"]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",
]
